--- a/RandomSearch/.project
+++ b/RandomSearch/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>IDDFS</name>
+	<name>RandomSearch</name>
 	<comment></comment>
 	<projects>
 	</projects>
