--- a/TicTacToe/.classpath
+++ b/TicTacToe/.classpath
@@ -16,5 +16,9 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/michaelkunkel/Google Drive/Work/BochumCourse/TestPepper/freetts-1.2.2-bin/freetts-1.2/lib/freetts-jsapi10.jar"/>
+	<classpathentry kind="lib" path="/Users/michaelkunkel/Google Drive/Work/BochumCourse/TestPepper/freetts-1.2.2-bin/freetts-1.2/lib/en_us.jar"/>
+	<classpathentry kind="lib" path="/Users/michaelkunkel/Google Drive/Work/BochumCourse/TestPepper/freetts-1.2.2-bin/freetts-1.2/lib/jsapi.jar"/>
+	<classpathentry kind="lib" path="/Users/michaelkunkel/Google Drive/Work/BochumCourse/TestPepper/freetts-1.2.2-bin/freetts-1.2/lib/mbrola.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
